New Tsinhoi Provs' Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4889,14 +4889,14 @@
  PROV4888: "4888"
  PROV4889: "4889"
  PROV4890: "4890"
- PROV4891: "4891"
+ PROV4891: "Naaishaan"
  PROV4892: "4892"
- PROV4893: "4893"
- PROV4894: "4894"
- PROV4895: "4895"
- PROV4896: "4896"
- PROV4897: "4897"
- PROV4898: "4898"
+ PROV4893: "Ngaushulum"
+ PROV4894: "Tsingshue"
+ PROV4895: "Shaamtue"
+ PROV4896: "Siulau"
+ PROV4897: "Taailuuk"
+ PROV4898: "Taaishu"
  PROV4899: "4899"
  PROV4900: "4900"
  PROV4901: "4901"
