--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -492,6 +492,8 @@
  rambutako: "Rambutako"
  likuruma: "Likuruma"
  burikat: "Burikat"
+ pemwa: "Pemwa"
+ vusarikrik: "Vusarikrik"
  
  ta_trai_group: "Ta-Trâi"
  kai: "Kái"
@@ -638,3 +640,28 @@
  kusan: "Kusan"
  chakkama: "Chakkama"
  dakhaforan: "Dakhaforan"
+
+ ramumoni_group: "Ramumoni"
+ anayata: "Anayata"
+ ahianin: "Ahianin"
+ wulahuta: "Wulahuta"
+ imobuti: "Imobuti"
+ weiyana: "Weiyana"
+ panasuku: "Panasuku"
+
+ waraleja_group: "Waraleja"
+ manibuni: "Manibuni"
+ ituniki: "Ituniki"
+
+ aminbaqlu_group: "Aminbaqlu"
+ vahatalax: "Vahatalax"
+ cimubasay: "Cimubasay"
+ vukinita: "Vukinita"
+
+ saurametan_group: "Saurametan"
+ henyan: "Henyan"
+
+ alimeali_group: "Alimeali"
+ pusuubi: "Pusuubi"
+ igatkaban: "Igatkaban"
+ bayarari: "Bayarari"
