color and loc fixes

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -133,6 +133,7 @@
  emperor_synods_banned_opinion: "Synods Banned"
  Bless_Wars: "Bless Wars"
  TD_Imperial_Decree4_tooltip: "Bless Wars against enemies of the Empire"
+ TD_Imperial_Decree4_tooltip_trigger: "Bless Wars is NOT active"
  TD_Imperial_Decree4_tooltip2: "Every border country of the Saelian Empire will get:"
  emperor_blessed_war: "Blessed Wars"
  desc_emperor_blessed_war: "The Emperor gave us a free hand to deal with the heretics."
