--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -522,6 +522,7 @@
  takwaba_valley_area: "Takwaba Valley"
  basrick_valley_area: "Basrick Valley"
  costerva_area: "Costerva"
+ campo_de_acucar_area: "Campo De Acucar"
  itsitila_area: "Itsitila"
  betukeq_area: "Betukeq"
  wakpami_area: "Wakpami"
@@ -1042,4 +1043,5 @@
 
  vutmo_area: "Vutmo"
  kwaangkei_area: "Kwaangkei"
- 
+ prakaani_bay_area: "Prakaani Bay"
+ chinkati_sea_area: "Chinkati Sea"
