Mysentria map changes

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4915,15 +4915,15 @@
  PROV4914: "4914"
  PROV4915: "4915"
  PROV4916: "4916"
- PROV4917: "4917"
- PROV4918: "4918"
- PROV4919: "4919"
- PROV4920: "4920"
- PROV4921: "4921"
- PROV4922: "4922"
- PROV4923: "4923"
- PROV4924: "4924"
- PROV4925: "4925"
+ PROV4917: "Titurbis"
+ PROV4918: "Cicania"
+ PROV4919: "Cirtejsa"
+ PROV4920: "Udensat"
+ PROV4921: "Finieris"
+ PROV4922: "Dziurawy"
+ PROV4923: "Nadwodno"
+ PROV4924: "Rzeczycow"
+ PROV4925: "Svirava"
  PROV4926: "4926"
  PROV4927: "4927"
  PROV4928: "4928"
