--- a/localisation/TD_03_missions_wedla_l_english.yml
+++ b/localisation/TD_03_missions_wedla_l_english.yml
@@ -6,7 +6,7 @@
  WED_the_show_of_power_desc: "We have been underestimated for too long. Ziemelians managed to take us by surprise and take our lands and Bogiland is only looking for a way to integrate us into their crown. We must show them that we are a force to reckon with."
 
  WED_restore_whats_ours_title: "Restore What is Ours"
- WED_restore_whats_ours_desc: "Our eastern territories - most importantly the port of Didisyva -  were lost to Ziemelians in the war of 1342. Since then we've been waiting for an occasion to strike and reconquer them and punish Ziemelia for their outrageous ambitions."
+ WED_restore_whats_ours_desc: "Our eastern territories - most importantly the trade hub in Vilkary -  were lost to Ziemelians in the war of 1342. Since then we've been waiting for an occasion to strike and reconquer them and punish Ziemelia for their outrageous ambitions."
 
  WED_control_over_mezonia_title: "Control over Mezonia"
  WED_control_over_mezonia_desc: "Mezonian and Uzkolian straits are the most important straits in this part of the world. Tons of valuable goods move and are taxed through them. If we manage to secure Mezonia the entire Ostemer basin will be in our reach."
