--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -694,7 +694,7 @@
  PROV_ADJ693: "Rzowienie"
  PROV_ADJ694: "Winierz"
  PROV_ADJ695: "Dzirz"
- PROV_ADJ696: "Didisyva"
+ PROV_ADJ696: "Vilkary"
  PROV_ADJ697: "Zagen"
  PROV_ADJ698: "Aufentin"
  PROV_ADJ699: "Neurech"
