--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -694,7 +694,7 @@
  PROV693: "Rzowienie"
  PROV694: "Winierz"
  PROV695: "Dzirz"
- PROV696: "Didisyva"
+ PROV696: "Vilkary"
  PROV697: "Zagen"
  PROV698: "Aufentin"
  PROV699: "Neurech"
