--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1045,3 +1045,31 @@
  kwaangkei_area: "Kwaangkei"
  prakaani_bay_area: "Prakaani Bay"
  chinkati_sea_area: "Chinkati Sea"
+
+ kyin_sir_rlun_area: "Kyin Sir Rlun"
+ ihasune_area: "Ihasune"
+ auhaku_area: "Auhaku"
+ manisira_area: "Manisira"
+ fatulanan_area: "Fatulanan"
+ umehiko_area: "Umehiko"
+ tuloure_area: "Tuloure"
+ botifofu_area: "Botifofu"
+ hopaukta_area: "Hopaukta"
+ bintun_area: "Bintun"
+ dadandali_area: "Dadandali"
+ kahuyan_area: "Kahuyan"
+ sireudan_area: "Sireudan"
+ limeburik_area: "Limeburik"
+ adubodo_area: "Abubodo"
+ ikuyalas_area: "Ikuyalas"
+ kityenef_area: "Kiteyenef"
+ nusajau_area: "Nusajau"
+ ireytas_area: "Ireytas"
+ bwacaka_area: "Bwacaka"
+ ciloki_area: "Biloki"
+ wertara_area: "Wertara"
+ rusurima_area: "Rusurima"
+ maluahuni_area: "Maluahuni"
+ saheasar_area: "Saheasar"
+ lalekari_area: "Lalekari"
+ cakrawalunia_sea_area_1: "Cakrawalunian Sea"
