--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -24,7 +24,8 @@
  zakarturi_region: "Zakarturia"
  mammeria_region: "Mammeria"
  fravasum_bay_region: "Fravasumi Bay"
- hestan_region: "Hestan"
+ hestan_region: "Mewitasr"
+ fadi_region: "Fadi"
  maqitan_sea: "Maqitan Sea"
  tonatitlan_region: "Tonatitlan"
  nalanaq_region: "Nalanaq"
