--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -26,11 +26,10 @@
  fawud_tradenode: "Sayaanud"
  muzbah_tradenode: "Kotorat"
  antawil_tradenode: "Talkimar"
- panourgian_sea_tradenode: "Panourgian Sea"
- kidinare_tradenode: "Kidinare"
- timis_tradenode: "Timis"
+ panourgian_sea_tradenode: "Eklidian Sea"
+ kidinare_tradenode: "Davirat"
  fravasum_tradenode: "Barzakhan"
- mammeria_tradenode: "Gkykyl"
+ mammeria_tradenode: "Belakedel"
  yhalum_tradenode: "Yhälum"
  tikinutl_tradenode: "Tikinutl"
  nalanaq_tradenode: "Nalanaq"
@@ -124,3 +123,6 @@
  abetosia_tradenode: "Abetosia"
  joologon_tradenode: "Joologon"
  maduni_tradenode: "Maduni"
+ mafid_tradenode: "Mafid"
+ zakarturia_tradenode: "Mshivar"
+ eamenos_tradenode: "Eamenos"
