--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -513,6 +513,14 @@
  pitriy_rebels_army: "$RELIGION$ Army"
  pitriy_rebels_demand: "Convert $COUNTRYNAME$"
 
+ nawamahu: "Nawamahu"
+ nawamahu_religion_desc: "codex"
+ nawamahu_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ nawamahu_rebels_title: "Religious"
+ nawamahu_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ nawamahu_rebels_army: "$RELIGION$ Army"
+ nawamahu_rebels_demand: "Convert $COUNTRYNAME$"
+
 
  aminian_pantheon: "Aminian Pantheon"
  aminian_pantheon_religion_desc: ""
