--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -8,7 +8,7 @@
  ilumist_rebels_name: "Ilumist Rebels"
  qubrayian_rebels_name: "Qubrayian Rebels"
  eopedian_rebels_name: "Eopedian Rebels"
- marstonic_pantheon_rebels_name: "Marstonic Pantheon Rebels"
+ marstonic_pantheon_rebels_name: "Viddaci Rebels"
  camarian_sun_cult_rebels_name: "Camarian Sun Cult Rebels"
  ehrenic_pantheon_rebels_name: "Ehrenic Pantheon Rebels"
  silvestrine_mythology_rebels_name: "Silvestrine Mythology Rebels"
