--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -145,7 +145,7 @@
 
  samadio_taedian: "Samadio-Mysentrian"
 
- marstonic_pantheon: "Marstonic Pantheon"
+ marstonic_pantheon: "Viddaci"
  marstonic_pantheon_religion_desc: "Zbojano-Marstonian pantheon of gods was widely practiced in north-eastern mysentria until the arrival of Saelianism. They believe in a court of gods led by Dievo, the god of power and loyalty. Many of their myths revolve around struggle of a man against nature and divine punishment."
  marstonic_pantheon_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  marstonic_pantheon_rebels_title: "Religious"
