--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -367,7 +367,7 @@
  shou_great_eastern_walls: "The Eastern Walls"
  shou_great_eastern_walls_desc: "While our natural borders of Yanshan and Ziyun protect us from the west, many places in the south-east lie undefended against the militant Zhuquans of Xun. In order to secure the prosperity of our empire, many cities and their surroundings along the border have been walled to protect our people from these savages."
  shou_trans_xizhou_trade: "Transxizhou Commerce"
- shou_trans_xizhou_trade_desc: "The stabilization in the steppe allowed for many major trade routes to be restored, once again connecting Hengtua with the distant ports of the Furmaria and Hestan. Thanks to our control over the major chokepoints and trade nodes, most notably Xishan, Beimen, Bäkälum and Bujian we can set any tarrifs and taxes we want without much strain on our economy."
+ shou_trans_xizhou_trade_desc: "The stabilization in the steppe allowed for many major trade routes to be restored, once again connecting Hengtua with the distant ports of the Furmaria, Visparaya and Hestan. Thanks to our control over the major chokepoints and trade nodes, most notably Xishan, Beimen, Bäkälum and Bujian we can set any tarrifs and taxes we want without much strain on our economy."
  shou_yesutian_legacy: "Yesünian Administration"
  shou_yesutian_legacy_desc: "While Yesün in some circles has a reputation of a tyrant who razes and raids his own nation, many respect his iron had, which allowed him to build a stable and strong empire, working like a perfectly created clock. Most obvious legacy of his work is his recruitment system, which allowed him to field a large force and defeat the various rebellions across the empire."
  shou_ganji_system: "Ganji System"
