--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -16,7 +16,7 @@
  lounavaki_vaista_tactics: "Vaista Tactics"
  lounavaki_vaista_tactics_desc: "For the most of history kakigian raiders have been a menace to any civilization trying to develop in the steppe. To effectively fight their bowmen we developed set of battle tactics to counteract them - it appears that a simple shield is quite effective."
  lounavaki_kakigian_trade: "Kakigian Trade"
- lounavaki_kakigian_trade_desc: "There are 3 major trade routes with the east - through maqitan sea, lake hestan and kakigian steppe. If anyone manages to monopolize any of these routes they will achieve greatness."
+ lounavaki_kakigian_trade_desc: "There are 3 major trade routes with the east - through Maqitan sea, lake Kemam and kakigian steppe. If anyone manages to monopolize any of these routes they will achieve greatness."
  lounavaki_resettle_the_steppe: "Resettle the Steppes"
  lounavaki_resettle_the_steppe_desc: "Recent turmoil in the contitent has caused mass loss of life and overall decrease of quality of life. Soil of great quality is left unattended and just waiting for someone to plow it."
  lounavaki_new_infrastructure: "New Infrastructure"
@@ -154,7 +154,7 @@
  srushta_laws_of_the_old_kingdom: "Laws of the Old Kingdom"
  srushta_laws_of_the_old_kingdom_desc: "History of Srushta is much older than most merchants and foreign rulers imagine. We were a nation even in the times of the ancient Zakarturi and Hestani empires. Many of the customs practiced in these times have deteriorated and we adapted many foreign ideas of order, but the laws of our ancestors are slowly resurfacing with the need of reforms."
  srushta_control_steppe_trade: "Control the Steppe Trade"
- srushta_control_steppe_trade_desc: "Trade in the Kakigian steppe is often an alternative route to a typical flow of goods through the lake Hestan. Southern route is often safer, however the goods are more expensive due to many middlemen along the way. Monopolization of kakigian trade gives us an advantage and cheaper prices for western markets."
+ srushta_control_steppe_trade_desc: "Trade in the Kakigian steppe is often an alternative route to a typical flow of goods through the lake Kemam. Southern route is often safer, however the goods are more expensive due to many middlemen along the way. Monopolization of kakigian trade gives us an advantage and cheaper prices for western markets."
  srushta_a_salbar_community: "A Salbar Community"
  srushta_a_salbar_community_desc: "Many of our Merhaanic shamans believe that mutual understanding is the key to the unity of humankind. With that in mind, this approach is also applied by our rulers, which not only use this to strengthen our internal bonds, but also help us reach an agreement with the people of Earth."
  srushta_taming_the_steppe: "Taming the Steppe"
