--- a/localisation/TD_01_flavour_rediscovery_l_english.yml
+++ b/localisation/TD_01_flavour_rediscovery_l_english.yml
@@ -5,5 +5,5 @@
  td_stories_of_distant_hantu: "Stories of Distant Hantu"
  td_rediscovery.1.b: "I'm more interested in the lands the travelled through."
  td_hao_lexin_travel_guide: "Hao Lexin Travel Guide"
- td_rediscovery.1.b_tt: "Discover Lake Hestan and neighboring provinces."
+ td_rediscovery.1.b_tt: "Discover Lake Kemam and neighboring provinces."
  td_rediscovery.1.c: "Please stay at our court for as long as you want."
