--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -45,7 +45,7 @@
  frasatah_forests_of_raxasamah: "Forests of Raxasamah"
  frasatah_forests_of_raxasamah_desc: "Raxasa has much greater population density than the rest of Visparaya thanks to its unique climate. Forests of our homeland bring not only valuable wood for shipmaking, but also olives, pomegranates and dates."
  frasatah_anjafrahan_trade: "Anjafrahan Trade"
- frasatah_anjafrahan_trade_desc: "Lake Hestan is a dense network of interconnected cities, hubs and merchants all working to earn as much profit as possible. Anjafrah, its southern part, is predominately dominated by Fravasumi, Warilasi, Raxasam and Aroshas merchants, most of which need to go through our ports."
+ frasatah_anjafrahan_trade_desc: "Lake Kemam is a dense network of interconnected cities, hubs and merchants all working to earn as much profit as possible. Anjafrah, its southern part, is predominately dominated by Fravasumi, Warilasi, Raxasam and Aroshas merchants, most of which need to go through our ports."
  frasatah_harsh_terrain_experts: "Harsh Terrain Experts"
  frasatah_harsh_terrain_experts_desc: "Qawartia, while not as fertise as Raxasamah, still hides many secret and treasures waiting for someone to find them. Nusabat Farrukhzad was the first one to encourage expansion and construction of new coastal settlements in Parum and often encourages local rulers to help in this endeavour."
  frasatah_strategic_control: "Strategic Control"
@@ -75,7 +75,7 @@
  group_baraqazhi_ideas_start: "Baraqazhi Minor Traditions"
  group_baraqazhi_ideas_bonus: "Baraqazhi Minor Ambition"
  baraqazhi_shepherds_of_baraqhaz: "Shepherds of Baraqhaz"
- baraqazhi_shepherds_of_baraqhaz_desc: "Our Shepherds are known for their wool around all of Hestani Basin. If we increase the amount of wool we make, we could profit from it."
+ baraqazhi_shepherds_of_baraqhaz_desc: "Our Shepherds are known for their wool around all of Visparaya. If we increase the amount of wool we make, we could profit from it."
  baraqazhi_mountainous_diversity: "Mountainous Diversity"
  baraqazhi_mountainous_diversity_desc: "Mountains are a harsh environement, and so people struggle to survive here. This makes our people less likely to start conflicts based on religion and more tolerant."
  baraqazhi_passage_guides: "Passage Guides"
