--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -13,7 +13,7 @@
  silvestrine_coast_sea_area: "Silvestrine Coast"
  north_niheyan_ocean_area: "Frontier Sea"
  panourgian_sea_area: "Panourgian Sea"
- hestani_lake_area: "Lake Hestan"
+ hestani_lake_area: "Lake Kemam"
  atlaxotlatl_area: "Atlaqotlatl Bay"
  grossenseen_area: "Grossenseen"
  almalan_current_area: "Almalan Current"
