--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -86,7 +86,7 @@
  rusatunad_reform_desc: "Holy Kausali Kingdoms of the Hitej Mountains value their religion above all else and wish to spread it across the world."
 
  sunbat_republic_reform: "Sunbat Republic"
- sunbat_republic_reform_desc: "Ancient merchant states of Sunbahat were always carriers of goods across the Hestani Sea."
+ sunbat_republic_reform_desc: "Ancient merchant states of Sunbahat were always carriers of goods across the Kemami lake."
 
  capirian_federation_reform: "Capirian Federation"
  capirian_federation_reform_desc: "We united this region by diplomacy and reconquest. Now entire Western Camaria will be under our protection from foreign or local invaders"
