--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -19,7 +19,7 @@
  canal_matliman_early: "§YMatliman Canal§! will now be able to be constructed regardless of our administrative technology."
  barzakhan_canal: "Barzakhan Canal"
  decision_barzakhan_canal_title: "Barzakhan Land Preparation"
- decision_barzakhan_canal_desc: "Barzakhan is a potential spot for a canal connecting Maqitan sea and Lake Hestan, making many more merchants deciding to travel through our lands. In order to construct it as fast as possible, we have to prepare the land for the groundworks."
+ decision_barzakhan_canal_desc: "Barzakhan is a potential spot for a canal connecting Maqitan sea and Lake Kemam, making many more merchants deciding to travel through our lands. In order to construct it as fast as possible, we have to prepare the land for the groundworks."
  canal_barzakhan_early: "§YBarzakhan Canal§! will now be able to be constructed regardless of our administrative technology."
 
  
