--- a/localisation/TD_unit_names_l_english.yml
+++ b/localisation/TD_unit_names_l_english.yml
@@ -217,10 +217,10 @@
 
  #Yermic (Muslim)
 
- #Hestani (Ottoman)
+ #Visparayan (Ottoman)
 
  hestani_infantry: "Hestani Infantry"
- hestani_infantryDESCR: "Common across the entire Lake Hestan, many mercenary companies adopted similar tactics and formations and were used in majority of conflicts during the middle ages."
+ hestani_infantryDESCR: "Common across the entire Lake Kemam, many mercenary companies adopted similar tactics and formations and were used in majority of conflicts during the middle ages."
 
  hestani_raiders: "Hestani Cavalry"
  hestani_raidersDESCR: "Light cavalry unit most often consisting of foreign mercenaries."
