--- a/localisation/TD_03_missions_pamkusean_l_english.yml
+++ b/localisation/TD_03_missions_pamkusean_l_english.yml
@@ -69,7 +69,7 @@
  Pamkusea_Retake_The_Pamkusea_desc: "We need to encourage our people to migrate back to Pamkusea and reclaim cities once lost to Dashavi settlers."
 
  Pamkusea_Exile_the_Ahnoyasi_title: "Exile the Ahnoyasi"
- Pamkusea_Exile_the_Ahnoyasi_desc: "To establish our rule over the Fravasumi bay, we must secure the major cities by replacing the local people with our own."
+ Pamkusea_Exile_the_Ahnoyasi_desc: "To establish our rule over the Varazan Gulf, we must secure the major cities by replacing the local people with our own."
 
  Pamkusea_A_Monoethnic_State_Reconquista_title: "Eparchiakian System"
  Pamkusea_A_Monoethnic_State_Reconquista_desc: "The proper conscription is a corner stone of a survival in the modern times. We must understand foreign armies in order to find what fits us."
@@ -117,7 +117,7 @@
  unlock_monoethnic_military_reform_tt: "Unlock Eparchiakian System 5 Tier Government Reform"
  unlock_multiethnic_military_reform_tt: "Unlock Eparchiakian System 5 Tier Government Reform"
  mepis_tadzar_allowed_nerfed_use_tt: "Can use Mepis Tadzar as Mission Reward."
- Pamkusea_Every_Fravasum_Province_will_gain_15_production_tt: "Every owned province in Fravasumi Bay Region will gain §G+15%§! §YLocal Production Efficiency§! for 50 years."
+ Pamkusea_Every_Fravasum_Province_will_gain_15_production_tt: "Every owned province in Varazan Gulf Region will gain §G+15%§! §YLocal Production Efficiency§! for 50 years."
  Pamkusea_Every_Gisia_Province_will_gain_33_manpower_tt: "Every owned province in Gisia Region will gain §G+33%§! §YLocal Manpower Modifier§! for 50% years."
  Pamkusea_Dynamic_Reward_depending_on_Ethnic_Branch_tt: "We will gain additional reward based on our tolerance towards other cultures."
  Pamkusea_Convert_Varazan_by_Blood_tt: "Every owned §YVarazan§! province will be converted to our primary culture, but they will lose §YDevelopment§! and gain §YDevastation§!."
