--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -155,7 +155,8 @@
  mesiheisi: "Mesiheisi"
  gapishvro: "Gapishvro"
  digacopsi: "Digacopsi"
- mostqavelisi: "Mostqavelisi"
+ mostqavelisi: "Mostqavelisi" 
+ vakepos: "Vakepos"
 
  akkcortians_group: "Akkcortians"
  cyromeids: "Cyromeid"
