--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -23,7 +23,7 @@
  pamkusea_region: "Pamkusea"
  zakarturi_region: "Zakarturia"
  mammeria_region: "Mammeria"
- fravasum_bay_region: "Fravasumi Bay"
+ fravasum_bay_region: "Varazanah"
  hestan_region: "Mewitasr"
  fadi_region: "Fadi"
  maqitan_sea: "Maqitan Sea"
