--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1630,3 +1630,14 @@
  ONE_ADJ: "Onerkian"
  NAG: "Nagios"
  NAG_ADJ: "Nagiosian"
+ KTI: "Kurtia"
+ KTI_ADJ: "Kurtian"
+ KRN: "Kariana"
+ KRN_ADJ: "Karianan"
+ TTR: "Tetri K'ilde"
+ TTR_ADJ: "Tetrian"
+ VEL: "Velypshen"
+ VEL_ADJ: "Velypsheni"
+ MRV: "Morvania"
+ MRV_ADJ: "Morvanian"
+ 
