--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -358,7 +358,7 @@
  PROV357: "Lovveka"
  PROV358: "Esydian Bay"
  PROV359: "Hafani Coast"
- PROV360: "Bay of Fravasum"
+ PROV360: "Varazan Gulf"
  PROV361: "East Furmarian Sea"
  PROV362: "Arisái"
  PROV363: "Mathan"
@@ -658,7 +658,7 @@
  PROV657: "Altfort"
  PROV658: "Keltburg"
  PROV659: "Aqerbic Plateau"
- PROV660: "Coast of Urmadin"
+ PROV660: "Urmadin Bay"
  PROV661: "Himmelnberg"
  PROV662: "Kahnari Bay"
  PROV663: "Eisenburg"
@@ -908,7 +908,7 @@
  PROV907: "Somirola"
  PROV908: "Ozivinna"
  PROV909: "Meitiesa"
- PROV910: "Eastern Kahbi Sea"
+ PROV910: "Ehtywiran Coast"
  PROV911: ""
  PROV912: "Dugaaniboai"
  PROV913: "Castima"
@@ -962,7 +962,7 @@
  PROV961: "Demauax"
  PROV962: "Sonmontagna"
  PROV963: "Melien"
- PROV964: "Sahlabadi Coast"
+ PROV964: "Xastrami Sea"
  PROV965: "Creval"
  PROV966: "Montax"
  PROV967: "Etnuenne"
@@ -978,7 +978,7 @@
  PROV977: "Balsahra Oasis"
  PROV978: "Qadi'madina" #city old
  PROV979: "Sabir" #saber
- PROV980: "Horian Depths"
+ PROV980: "Mafidian Bay"
  PROV981: "Arak" #cavern
  PROV982: "Central Amsulan Gulf"
  PROV983: "Ehran"
@@ -987,7 +987,7 @@
  PROV986: "Fawud"
  PROV987: "Turahtur" #mountain
  PROV988: "Fawud"
- PROV989: "Hariq Desert"
+ PROV989: "Hariq"
  PROV990: "Telonah"
  PROV991: "Qubrayia"
  PROV992: "Keihalaskan Bay"
@@ -1198,7 +1198,7 @@
  PROV1197: "Shyatohtar"
  PROV1198: "Zaothar"
  PROV1199: "Hesh"
- PROV1200: ""
+ PROV1200: "Ezata"
  PROV1201: "Taoxah"
  PROV1202: "Manayaz"
  PROV1203: "Dahami Bay"
@@ -1229,7 +1229,7 @@
  PROV1228: "Sephogos"
  PROV1229: "Mesymenea"
  PROV1230: "Nefapont"
- PROV1231: "Bay of Nuqat"
+ PROV1231: "Horian Depths"
  PROV1232: "Hyncae"
  PROV1233: "Apahlamke"
  PROV1234: "Eastern Arctic Sea"
@@ -1257,7 +1257,7 @@
  PROV1256: "Teimutsike"
  PROV1257: "1257"
  PROV1258: "Dasarali"
- PROV1259: "Dasarali"
+ PROV1259: "Mostqaveli"
  PROV1260: "Malagosans"
  PROV1261: "Shimgav"
  PROV1262: "Lake Srushta"
@@ -1265,7 +1265,7 @@
  PROV1264: "Kastopsil"
  PROV1265: "Kashir"
  PROV1266: "Palofos"
- PROV1267: "Digacopians"
+ PROV1267: "Nirqad"
  PROV1268: "Duxaz"
  PROV1269: "Pernalos"
  PROV1270: "Xrizamat"
@@ -1273,9 +1273,9 @@
  PROV1272: "Fozayt"
  PROV1273: "Farnak"
  PROV1274: "Kataruz"
- PROV1275: "Mostqaveli"
+ PROV1275: ""
  PROV1276: "Kurkutal"
- PROV1277: "Mostqaveli"
+ PROV1277: "Nirqad"
  PROV1278: "Virinos"
  PROV1279: "Kurta"
  PROV1280: "Kanoripol"
@@ -1332,11 +1332,11 @@
  PROV1331: "Aiabul" #high gate
  PROV1332: "Nyhmatna" #calm valley
  PROV1333: "Saaz"
- PROV1334: "Dusrat"
- PROV1335: "Digacopians"
- PROV1336: "Nirqad"
+ PROV1334: "Digacopians"
+ PROV1335: "Kurkutal"
+ PROV1336: "Nesmin"
  PROV1337: "Mahnex"
- PROV1338: "Nesmin"
+ PROV1338: "Digacopians"
  PROV1339: "Baxan"
  PROV1340: "Vasilypeia"
  PROV1341: "Mehtar"
@@ -1372,7 +1372,7 @@
  PROV1371: "Hnat"
  PROV1372: "Simar"
  PROV1373: "Sipadr"
- PROV1374: "Lower Nirqad"
+ PROV1374: "Dusrat"
  PROV1375: "Iwbartan"
  PROV1376: "Qas"
  PROV1377: "Madrehw"
@@ -1384,12 +1384,12 @@
  PROV1383: "Qupan"
  PROV1384: "Xazir"
  PROV1385: "Hnatmen"
- PROV1386: ""
+ PROV1386: "Shavisan"
  PROV1387: "Xanemat"
  PROV1388: "Chewaluyan Coast"
  PROV1389: ""
  PROV1390: "Shuhtran"
- PROV1391: ""
+ PROV1391: "Mglebiteke"
  PROV1392: ""
  PROV1393: "Gulf of Maqlan"
  PROV1394: "Smawqar"
@@ -1738,7 +1738,7 @@
  PROV1737: "Ginimekuk"
  PROV1738: "Holsyak"
  PROV1739: "Osmalig"
- PROV1740: "Dysameg"
+ PROV1740: "Taratsikhe"
  PROV1741: ""
  PROV1742: "Radoriasan Bay"
  PROV1743: "Secenan Coast"
@@ -1955,7 +1955,7 @@
  PROV1954: "Kikuyat"
  PROV1955: "Parahaw"
  PROV1956: "Hasrat"
- PROV1957: "Aparati"
+ PROV1957: "Dagraag"
  PROV1958: "Taradhat"
  PROV1959: "Baraqhaz"
  PROV1960: "Ashan"
@@ -4416,7 +4416,7 @@
  PROV4415: "Draat"
  PROV4416: "Karshan"
  PROV4417: "Dosabalen"
- PROV4418: "Malagosans"
+ PROV4418: "Digacopians"
  PROV4419: "Riknisgar"
  PROV4420: "Aghmoslavetia"
  PROV4421: "Enyobi" #not home
@@ -4925,7 +4925,7 @@
  PROV4924: "Rzeczycow"
  PROV4925: "Svirava"
  PROV4926: "4926"
- PROV4927: "4927"
+ PROV4927: "Dagraag"
  PROV4928: "Nagios"
  PROV4929: "4929"
  PROV4930: "4930"
@@ -4941,8 +4941,8 @@
  PROV4940: "4940"
  PROV4941: "4941"
  PROV4942: "4942"
- PROV4943: "4943"
- PROV4944: "4944"
+ PROV4943: "Tetri K'ilde"
+ PROV4944: "Kariana"
  PROV4945: "4945"
  PROV4946: "4946"
  PROV4947: "4947"
