--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -29,7 +29,7 @@
  ahnoyas_western_influence: "Western Influence"
  ahnoyas_western_influence_desc: "After the fall of Varazahani nusabate, most of the court and heritage remained in Azhishan. The late empire was greatly influenced by pamkusean and chilverchian arts and architecture, which can still be seen to this day while walking on the streets of our capital."
  ahnoyas_the_silk_trade: "The Silk Trade"
- ahnoyas_the_silk_trade_desc: "The Dashavi silk magnates are still quite powerful around the Fravasumi Bay. Thankfully, many of our merchants maintain good relations with them and we can benefit from it even if we don't control the production centers thanks to the rights of long distance distribution."
+ ahnoyas_the_silk_trade_desc: "The Dashavi silk magnates are still quite powerful around the Varazan Gulf. Thankfully, many of our merchants maintain good relations with them and we can benefit from it even if we don't control the production centers thanks to the rights of long distance distribution."
  ahnoyas_closed_court: "Closed Court"
  ahnoyas_closed_court_desc: "Many lessons were learned after the fall of Varazahan, one of which is to never trust outsiders. After nusabat Shahrzad was assassinated, many kings became paranoid and made their court increasingly elite and exclusiveto protect themselves and their interest."
  ahnoyas_varazan_legacy: "Varazan Legacy"
