--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -167,12 +167,21 @@
  ostemeria_nation_title: "Unite Ostemer Merchants @OST"
  ostemeria_nation_desc: "While the Ostemers are loosely organized into multiple guilds which often discuss important matters in the merchants' assembly, we still lack a unified national structure. If we finally politicaly unite, we will finally rule the Ostsee on our own."
  kwaang_nation_title: "Restore Kwaang Dynasty @KWN"
- kwaang_nation_desc: ""
+ kwaang_nation_desc: "Great Kwaang was once a beacon of civilization in the region, being the first true regional power able to match even the Heisen empire. Now that the divine blessing has returned to us, we must reclaim the mantle of this powerful state."
 
- diarena_nation_title: "Unite Diarena"
- diarena_nation_desc: ""
+ diarena_nation_title: "Unite Diarena @DIA"
+ diarena_nation_desc: "While there are many differences between even the neighboring tribes and cities, we must still strive to national unification, showing the world our might."
  diarenan_colonization: "Diarenan Colonization"
  desc_diarenan_colonization: "Unification of Diarena allowed us to more effectively expand inland."
 
- bac_wong_nation_title: "Restore Bac Wong"
+ bac_wong_nation_title: "Restore Bac Wong @BCW"
  bac_wong_nation_desc: ""
+
+ mammeria_nation_title: "Unite Mammerians @MAM"
+ mammeria_nation_desc: "Fighing each other we will conquer nothing. As a one state, we will conquer the world!"
+
+ cyromeid_nation_title: "Unite Cyromeids @CYR"
+ cyromeid_nation_desc: "Fighing each other we will conquer nothing. As a one state, we will conquer the world!"
+
+ onerkia_nation_title: "Unite Onerkans @ONE"
+ onerkia_nation_desc: "Fighing each other we will conquer nothing. As a one state, we will conquer the world!"
