--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1073,3 +1073,12 @@
  saheasar_area: "Saheasar"
  lalekari_area: "Lalekari"
  cakrawalunia_sea_area_1: "Cakrawalunian Sea"
+
+ colina_del_norte_area: "Colina del Norte"
+ maczyzna_area: "Maczyzna"
+ kidinare_estuary_area: "Kidinare Estuary"
+ seniria_area: "Seniria"
+ absukha_area: "Absukha"
+ cedodak_area: "Cedodak"
+ bukatar_area: "Bukatar"
+ yinnaya_area: "Yinnaya"
