--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -667,3 +667,8 @@
  pusuubi: "Pusuubi"
  igatkaban: "Igatkaban"
  bayarari: "Bayarari"
+
+ daslevania: "Daslevanian"
+ morvanian: "Morvanian"
+ kurtian: "Kurtian"
+ gizir: "Gizir"
