--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -52,9 +52,11 @@
  
 
  uzkolian_toll: "Uzkolian Toll"
+ desc_uzkolian_toll: "All trade from the east to Ehrenia must come through Uzkolian strait."
  hre_imperial_road: "Imperial Road"
  desc_hre_imperial_road: "This province belongs to the long network of roads built by the Saelian Empire to secure trade routes and increase the flow of goods."
  mezonian_toll: "Mezonian Toll"
+ desc_mezonian_toll: "All trade coming into the Ostsee must come through Mezonian straits."
  WGH_quarters: "WGH Quarters"
  desc_WGH_quarters: "Wedlanska Gildija Handlowa owns many quarters in this province."
  WGH_trade_power: "WGH Quarters"
