--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -281,3 +281,12 @@
  umati_company: "Umati Charter"
  TRADE_COMPANY_UMATI_Root_Culture_GetName: "[Root.Culture.GetName] Husrhadigar Company"
  TRADE_COMPANY_UMATI_Trade_Company: "Husrhadigar Trade Company"
+ cakrawalunia_company: "Cakrawalunian Charter"
+ TRADE_COMPANY_CAKRAWALUNIA_Root_Culture_GetName: "[Root.Culture.GetName] Amulewo Company"
+ TRADE_COMPANY_CAKRAWALUNIA_Trade_Company: "Cakrawalunian Trade Company"
+ gisian_company: "Gisian Charter"
+ TRADE_COMPANY_GISIA_Root_Culture_GetName: "[Root.Culture.GetName] Gisia Company"
+ TRADE_COMPANY_GISIA_Trade_Company: "Gisian Trade Company"
+ sunbat_company: "Sunbat Charter"
+ TRADE_COMPANY_SUNBAT_Root_Culture_GetName: "[Root.Culture.GetName] Qawartia Company"
+ TRADE_COMPANY_SUNBAT_Trade_Company: "Qawartian Trade Company"
