--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -1,17 +1,17 @@
 ﻿l_english:
- LOADING_TIP_0: "East Maqitan Piracy and Turmoil in the steppe has led many navigators to search for new trade routes in the west."
+ LOADING_TIP_0: "Maqitan Piracy and Turmoil in the steppe has led many navigators to search for new trade routes to Hengtua in the west."
  LOADING_TIP_1: "Early Ehrenis and Argenians were famous for their raids along the coast of Silvestria, sea of Furmaria and even as far as Camaria."
  LOADING_TIP_2: "Kalmaqan was a Yaltazim state which unified the Aqerbic Peninsula in the VII century."
  LOADING_TIP_3: "Donuçakar converted to Saelianism after a diplomatic pact between the king and the Sigilian Emperor in the XIII century."
- LOADING_TIP_4: "Eneratian Emperorship has degenerated into a merely informal title which is held by a Chofeudian ruler Cyrille Eneratius de Cuei."
+ LOADING_TIP_4: "Through the ages, the title of Eneratian emperor has lost all meaning and splendor, with current holder being held by an insignificant Cyrille de Cuei."
  LOADING_TIP_5: "Members of the Ramh Usra claim that they descend from the Musarfic god of war - Alramha."
- LOADING_TIP_6: "What was once homeland of the Pamkusean people is now ruled by Visparayan states - remnants of the Varazani Empire."
+ LOADING_TIP_6: "Conquest of Pamkusea by Aevadata of Varazanah has forced many of their leaders into exodus across the sea."
  LOADING_TIP_7: "Tetrarchy is responsible for electing the next ruler of Sigilian church, but with each year their power over the emperor grows."
  LOADING_TIP_8: "Brianola is a peasant republic, but with a dynastical dictatorship in charge."
- LOADING_TIP_9: "Geniburgh Company is a group of mercenaries which served in the Zakarturi lands - until they grew strong enough to establish their own state."
+ LOADING_TIP_9: "Geniburgh company was originally hired to protect the border between Morvania and Puuraidema by Zakarturi emperors."
  LOADING_TIP_10: "Tonatitlani people established their empire following the eighth century collapse caused by mass epidemics and famine."
  LOADING_TIP_11: "According to some scholars, during antiquity Rouvia was a powerful kingdom, however it was destroyed by Capiran and Aqerbic settlers."
- LOADING_TIP_12: "Aevadata of Varazanah conquered the Pamkusean peninsula in the XIV century, forcing the local population into exile." 
+ LOADING_TIP_12: "While most of Zakarturi states managed to survive the hordes in the east, there are still few holdouts in Kurkutal and Kedipol." 
  LOADING_TIP_13: "Instead of trying to supress the locals, Aurang of Inirkaram decided to assimilate into his subjects, founding the kingdom of Apaktaros."
  LOADING_TIP_14: "Ehwitrawi and Mewitan peoples are renowned for their mutual hatred."
  LOADING_TIP_15: "The City of Togawy is famous for producing high quality Amber jewelry."
@@ -23,10 +23,11 @@
  LOADING_TIP_21: "King Pepik 'The Mad' owned 2 boars, 3 camels and an elephant."
  LOADING_TIP_22: "After the fall of the Bunelisuli Empire the throne was usurped by the two younger brothers of the legitimate khan - Markörgis Ariunuulyn."
  LOADING_TIP_23: "The Hengtuan nations widely embraced gunpowder warfare much earlier than Mysentria, but it was the west that perfected the technology."
- LOADING_TIP_24: "Cities of Lameng were established after mass exodus of people trying to flee from Huangche autocrats."
+ LOADING_TIP_24: "Cities of Lameng were established after many merchants and scholars fled the growing Huangche regimes."
  LOADING_TIP_25: "Empire of Paradevari protected Samadia from tribal raids for most of its history - up until Bunelisuli invasion."
  LOADING_TIP_26: "People of Šarikullu control the most important trade routes in North Sahila, allowing them to indirectly influence many countries."
  LOADING_TIP_27: "Gug! Gug! Gug!"
  LOADING_TIP_28: "\"Three thousand armed men, their blades of steel\nMarched to the shore, where waves would kneel.\""
  LOADING_TIP_29: "Kabonen is a republic founded by Mawaqi merchants that lost their way when they tried to reach Hengtua by sea."
  LOADING_TIP_30: "Bnai Byniev is known as the Moon Kingdom, due to the fact that its founding matriarch, Shin Sawbu Nardu, was born during Full Moon."
+ LOADING_TIP_31: "Mafid managed to survive the Bunelisuli invasion thanks to their willingness to purchase and sell Khan's slaves."
