--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -39,8 +39,8 @@
 
  estate_burghers_gisian_resettlement: "Gisian Resettlement"
  estate_burghers_gisian_resettlement_desc: "Our slow reclamation of once great Zakarturi empire brought with it many new settlers ready to restore farming capabilities of these lands."
- estate_burghers_gisian_resettlement_gt: "Gisian steppe provinces will get §G-25%§! §YLocal Development Cost§!."
- estate_burghers_gisian_resettlement_rt: "Gisian steppe provinces will lose §G-25%§! §YLocal Development Cost§! reduction."
+ estate_burghers_gisian_resettlement_gt: "All provinces in Zakarturi Steppe subcontinent (excluding Mammeria) with steppe terrain will get §G-25%§! §YLocal Development Cost§!."
+ estate_burghers_gisian_resettlement_rt: "All provinces in Zakarturi Steppe subcontinent (excluding Mammeria) with steppe terrain will lose §G-25%§! §YLocal Development Cost§! reduction."
  estate_burghers_gisian_resettlement_modifier: "Gisian Resettlement"
  desc_estate_burghers_gisian_resettlement_modifier: "Our slow reclamation of once great Zakarturi empire brought with it many new settlers ready to restore farming capabilities of these lands."
 
