--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -668,7 +668,7 @@
  igatkaban: "Igatkaban"
  bayarari: "Bayarari"
 
- daslevania: "Daslevanian"
+ daslevanian_group: "Daslevanian"
  morvanian: "Morvanian"
  kurtian: "Kurtian"
  gizir: "Gizir"
