--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -351,7 +351,7 @@
  ONLY_SIGILIAN: "£no£ Only Sigilian nations can join the Empire."
  SIGILIAN_HIGH_PIETY: "£no£ Your Imperial Allegiance needs to be above 50 to join the Saelian Empire."
  SIGILIAN_LOW_PIETY: "£no£ Your Imperial Allegiance needs to be below -25 to leave the Saelian Empire."
- EMPEROR_CANT_ATTACK_SUBJECTS: "The Emperor cannot wage wars against his sigilian subjects without the permission from the tetrarchy."
+ EMPEROR_CANT_ATTACK_SUBJECTS: "The Emperor cannot wage wars against his sigilian subjects without permission from the tetrarchy."
  emperor_allowed_war: "Emperor allowed pacification"
  desc_emperor_allowed_war: "The Tetrarchy has given the emperor right to punish their unruly subjects."
  elector_graceful_enough: "The tetrarchs are already graceful enough."
