--- a/localisation/core_l_english.yml
+++ b/localisation/core_l_english.yml
@@ -146,7 +146,7 @@
  CONVREL_PAPACY: "The Papacy cannot convert to another religion."
  AND_MONTHLY_THE_FOLLOWING: "And changes by $VAL|Y1$ each month due to:\n$DESC$"
  PIETY_DESCRIPTION: "Imperial Allegiance represents how close and loyal to the imperial rule our country is. It ranges from -100 (Particularism), representing almost total independence from imperial decisions regarding spiritual matters (and sometines even syncretism with local faiths), to 100 (Universalism), which represents folowing exact will of the Emperor."
- PIETY_DESCRIPTION_ESTATES: "\nThe type of piety of your ruler will influence the loyalty of your Estates."
+ PIETY_DESCRIPTION_ESTATES: "\nThe type of allegiance of your ruler will influence the loyalty of your Estates."
  KARMA_DESC2: "Ruler Fervor represents your monarchs stance against devils and evil in the world. If the ruler is too focused on fighting evil spirits he might succumb into becoming one himself, but if they decide to disregard this fight he might even be seen as supporter of evil. The trick lies in the balance between active and passive fight and to not disregard lives of the nations' population."
  KARMA_DESC: "Ruler becomes a pacifist from:\n- §YHonoring alliances§!\n- §YReleasing vassals§!\n- §YReleasing nations in peace deals§!\n- §YReturning cores§!\n- §YConverting Provinces§!\n\nRuler becomes a warlord from:\n- §YStarting wars§!\n- §YTaking provinces in peace deals§!"
  PATRIARCH_DESCRIPTION: "Zheng means different things to various schools of thought, but it is generally seen as righteousness of the ruler and their legitimacy. While High Zheng might legitimize our rule in the provinces, low Zheng can cause widespread unrest and even detronization."
